stuff to make the app load without errors

--- a/app/src/index.html
+++ b/app/src/index.html
@@ -1,10 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
+<html ng-app="dnd.ui" ng-controller="mainController">
 <head>
     <meta charset="UTF-8">
-    <title></title>
+    <title>DnD Spells</title>
+    <link rel=stylesheet href="static/sass/dnd.min.css">
 </head>
 <body>
-    <p>Test</p>
+<div class="frame">
+
+</div>
+
+
+
+
+<!-- Single vendor.js file for all third party dependencies -->
+<script type=text/javascript src="vendor/vendor.js"></script>
+<!-- The JS file for this application -->
+<script type=text/javascript src="dnd-ui.js"></script>
 </body>
 </html>
