--- a/app/src/index.html
+++ b/app/src/index.html
@@ -3,19 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <title>DnD Spells</title>
+    <!--<link rel=stylesheet href="vendor/vendor.css">-->
     <link rel=stylesheet href="static/sass/dnd.min.css">
 </head>
 <body>
-<div class="frame">
+    <ui-view class="frame"></ui-view>
 
-</div>
+    <!-- Single vendor.js file for all third party dependencies -->
+    <script type=text/javascript src="vendor/vendor.js"></script>
 
-
-
-
-<!-- Single vendor.js file for all third party dependencies -->
-<script type=text/javascript src="vendor/vendor.js"></script>
-<!-- The JS file for this application -->
-<script type=text/javascript src="dnd-ui.js"></script>
+    <!-- The JS file for this application -->
+    <script type=text/javascript src="dnd-ui.js"></script>
 </body>
 </html>
