setting up some css files, setting up a sideboard component

--- a/app/src/index.html
+++ b/app/src/index.html
@@ -7,6 +7,7 @@
     <link rel=stylesheet href="static/sass/dnd.min.css">
 </head>
 <body>
+    <dnd-sideboard></dnd-sideboard>
     <ui-view class="frame"></ui-view>
 
     <!-- Single vendor.js file for all third party dependencies -->
