add top nav file, move views to new /views directory, add a spell list view

--- a/app/src/index.html
+++ b/app/src/index.html
@@ -8,6 +8,7 @@
     </head>
     <body>
         <div class="page-frame">
+            <dnd-top-nav></dnd-top-nav>
             <dnd-sideboard></dnd-sideboard>
             <ui-view class="content-frame"></ui-view>
         </div>
