--- a/app/src/index.html
+++ b/app/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html ng-app="dnd.ui" ng-controller="mainController">
+<html ng-app="dnd.ui" ng-controller="mainController as vm">
     <head>
         <title>DnD Spells</title>
         <base href="/">
@@ -7,7 +7,7 @@
         <link rel=stylesheet href="static/sass/dnd.min.css">
     </head>
     <body>
-        <div class="page-frame">
+        <div class="page-frame" ng-class="{'active': vm.isSideboardOpen}">
             <dnd-top-nav></dnd-top-nav>
             <dnd-sideboard></dnd-sideboard>
             <ui-view class="content-frame"></ui-view>
